@@ -3,6 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '3.2.5'
 	id 'io.spring.dependency-management' version '1.1.4'
 	id 'checkstyle'
+	id 'pmd'
 	id 'jacoco'
 	id 'info.solidsoft.pitest' version '1.15.0'
 
@@ -29,12 +30,17 @@ java {
 	sourceCompatibility = '17'
 }
 
-checkstyle {
-	toolVersion = '10.15.0'
-	config = resources.text.fromFile('checkstyle.xml')
-	sourceSets = [sourceSets.main]
+bootRun{
+	jvmArgs = ["--add-opens=java.base/java.util=ALL-UNNAMED"]
 }
 
+checkstyle {
+	sourceSets = [sourceSets.main]
+	toolVersion = '10.16.0'
+	config = resources.text.fromFile('../config/checkstyle.xml')
+	showViolations = true
+	ignoreFailures = false // makes the build fail on violations
+}
 
 repositories {
 	mavenCentral()
@@ -55,6 +61,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.apache.kafka:kafka-streams'
 	implementation 'org.springframework.kafka:spring-kafka'
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
@@ -138,4 +145,15 @@ pitest {
 	threads = 4
 	timestampedReports = false
 	outputFormats = ['XML', 'HTML']
+}
+
+
+pmd {
+	sourceSets = [sourceSets.main]
+	ruleSets = []
+	ruleSetFiles = files('../config/pmd.xml')
+	incrementalAnalysis = true
+	ignoreFailures = false
+	consoleOutput = true
+	threads = 4
 }
